--- a/README.asciidoc
+++ b/README.asciidoc
@@ -3,6 +3,18 @@ Errata for "Gradle in Action"
 
 This is a compiled list of improvements to the content of the published book link:http://www.manning.com/muschko/["Gradle in Action"]. If you think a particular topic is not explained well enough or simply wrong, please post a message to the link:http://www.manning-sandbox.com/forum.jspa?forumID=849[author online forum].
 
+=== Page 38, section 2.4, second bullet point
+
+____
+Windows: In the dialog environment variable, define the variable GRADLE_HOME and update your path settings (figure 2.9).
+____
+
+should be
+
+____
+Windows: In the Environment Variables dialog, define the variable GRADLE_HOME and update your path settings (figure 2.9).
+____
+
 === Page 46, section 2.6.4, last paragraph
 
 The runtime behavior of the Gradle daemon can be explained in more detail. The following paragraph is more explicit about its use from the command line:
