--- a/README.asciidoc
+++ b/README.asciidoc
@@ -72,6 +72,20 @@ As the sample project doesn't provide any unit tests, the `reports` directory wo
     ├── build.gradle
     └── src
 
+=== Page 102, first sentence (starting on page 103)
+
+Missing letter "d" in method name.
+
+____
+At the time of writing, you only need to implement one method: `graphPopulate(TaskExecutionGraph)`.
+____
+
+should be
+
+____
+At the time of writing, you only need to implement one method: `graphPopulated(TaskExecutionGraph)`.
+____
+
 === Page 124, Listing 5.9
 
 The syntax for declaring a custom Maven repository was incorrect. There should be no comma and closing parenthesis.
