Reference correct listing

--- a/README.asciidoc
+++ b/README.asciidoc
@@ -175,6 +175,14 @@ should be
     :sourcesJar
     :dist
 
+=== Page 241, paragraph "Using the Maven2Gradle task"
+
+Create a new directory, create a `pom.xml` file, and copy the contents of listing 9.11 into it.
+
+should be
+
+Create a new directory, create a `pom.xml` file, and copy the contents of listing 9.10 into it.
+
 === Page 356, figure 13.26
 
 The image shows a different build number for each build step e.g. `#11 todo-initial`, `#4 todo-integ-tests`. However,
